# SCCToolKit

./: .gitignore  Acknowledgement.txt  CMakeLists.txt  License.txt  README.txt
Apps/: readme.txt
Apps/chromakey/: CMakeLists.txt  Readme.txt  main.mm
Apps/chromakey2/: CMakeLists.txt
Apps/chromakey2/Resources/: License.txt  Readme.txt
Apps/chromakey2/Resources/Artworks/: HSB-bar.psd  howtomake_icns_osx.txt
Apps/chromakey2/Resources/Readme.rtfd/: TXT.rtf
Apps/chromakey2/src/: Application.h  Application.mm  ApplicationStatus.h  ChromaWindow.h  ChromaWindow.mm  ChromaWindow.ui  CvChromakey.h  EndoView.h  EndoView.mm  MainWindow.h  MainWindow.mm  MainWindow.ui  MainWindow_1024.ui  QResources.qrc  Settings.h  Translation_ja_JP.ts
Apps/endodemo/: CMakeLists.txt
Apps/endodemo/Resources/: Readme.txt
Apps/endodemo/Resources/Readme.rtfd/: TXT.rtf
Apps/endodemo/src/: Application.h  Application.mm  ApplicationStatus.h  EndoView.h  EndoView.mm  MainWindow.h  MainWindow.mm  MainWindow.ui  MainWindow_1366x768.ui  MainWindow_1920x1080.ui  Settings.h  main.mm
Apps/endoprocess/: CMakeLists.txt
Apps/endoprocess/Resources/: License.rtf  License.txt  Readme.txt  icon.icns
Apps/endoprocess/Resources/Readme.rtfd/: TXT.rtf
Apps/endoprocess/src/: Application.h  Application.mm  MainWindow.h  MainWindow.mm  MainWindow.ui  QResources.qrc  Settings.h  Translation_ja_JP.ts  main.mm
Apps/i2endo/: CMakeLists.txt
Apps/i2endo/Resources/: Readme.txt
Apps/i2endo/Resources/Readme.rtfd/: TXT.rtf
Apps/i2endo/src/: Application.h  Application.mm  CvChromakey.m  MainWindow.h  MainWindow.mm  MainWindow_1024.ui  MainWindow_1024x.ui
Apps/i3endo/: CMakeLists.txt
Apps/i3endo/Resources/: License.rtf  License.txt  Readme.rtf  Readme.txt  icon.icns
Apps/i3endo/src/: ApplicationStatus.h  DeckLinkModeInfoIterator.cpp  DeckLinkModeInfoIterator.h  QResources.qrc  main.cpp  my_application.cpp  my_application.h  my_mainview.cpp  my_mainview.h  my_mainwindow.cpp  my_mainwindow.h  my_mainwindow.ui  my_mainwindow_ja_JP.ts  my_settings.h  timerSingleton.cpp  timerSingleton.h
Apps/lkdemo/: CMakeLists.txt  lkdemo.cpp  lkdemo1.mm  lkdemo2.mm  lkdemo3.mm  lkdemo4.mm  lkdemo5.mm
Cmake/: FindDeckLinkSDK.cmake  Qt4MacrosExtra.cmake  Qt5MacrosExtra.cmake  QtMacrosExtra.cmake  SCCToolKitConfig.cmake.in  SCCToolKitConfigPlatform.cmake  SCCToolKitConfigure.h.in  SCCToolKitUtils.cmake
Examples/: CMakeLists.txt
Examples/capture_cv1/: CMakeLists.txt  main.c  main.cpp  readme.txt
Examples/capture_cv2/: CMakeLists.txt  main.cxx  readme.txt  readme_ja_JP.txt
Examples/capturecenter1/: CMakeLists.txt  main.mm  readme.txt  readme_ja_JP.txt
Examples/capturecenter2/: CMakeLists.txt  main.mm  readme.txt  readme_ja_JP.txt
Examples/chromakey/: CMakeLists.txt  CvChromakey.h  CvChromakey.m  huetool.cpp  huetool.h  main.mm  readme.txt
Examples/chromakey2/: CMakeLists.txt  src
Examples/qtwin/: CMakeLists.txt  main.mm  memo.rtf  readme.txt
Source/: CMakeLists.txt  Capture.h  Capture.mm  CaptureCenter.h  CaptureCenter.mm  CaptureDeckLink.h  CaptureDeckLink.mm  CaptureQtKit.h  CaptureQtKit.mm  CaptureQtKit_private.h  CaptureTypes.h  CaptureUtils.cpp  CaptureUtils.h  CaptureUtils_private.h  CustomDeckLinkVideoFrame.cpp  CustomDeckLinkVideoFrame.h  QCvGLWidget.h  QCvGLWidget.mm  QCvGLWidget_private.h  QCvGLWidget_private.m  QCvGraphicsView.cpp  QCvGraphicsView.h  QCvOGLWidget.h  QCvOGLWidget.mm  SCCToolKit_ja_JP.ts
