#/*=========================================================================
# 
# Program:   Small Computings for Clinicals Project
# Module:    $HeadURL: $
# Date:      $Date: $
# Version:   $Revision: $
# 
# Kiyoyuki Chinzei, Ph.D.
# (c) National Institute of Advanced Industrial Science and Technology (AIST), Japan All rights reserved.
# This work is/was supported by
# * NEDO P10003 "Intelligent Surgical Instruments Project", Japan.
# * MHLW H24-Area-Norm-007 "Super Sensitive Endoscope", Japan.
# * AIST "Regulatory Science Platform" FS, Japan.
# 
# This software is distributed WITHOUT ANY WARRANTY; without even
# the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR
# PURPOSE.  See the above copyright notices for more information.
# 
# =========================================================================*/

ADD_SUBDIRECTORY(capture_cv1)
ADD_SUBDIRECTORY(capture_cv2)
ADD_SUBDIRECTORY(capturecenter1)
ADD_SUBDIRECTORY(capturecenter2)
ADD_SUBDIRECTORY(chromakey)
ADD_SUBDIRECTORY(chromakey2)
ADD_SUBDIRECTORY(qtwin)